force-app/main/default/objects/Specification__c/fields/incrementalProcessFeeRoofOne__c.field-meta.xml
<CustomField>
    <fullName>incrementalProcessFeeRoofOne__c</fullName>
    <label>Source 1 Process Fee Roof 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>