force-app/main/default/objects/Specification__c/fields/incrementalProcessFeeRoofTwo__c.field-meta.xml
<CustomField>
    <fullName>incrementalProcessFeeRoofTwo__c</fullName>
    <label>Source 1 Process Fee Roof 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>