force-app/main/default/objects/Specification__c/fields/incrementalProcessFeeRoofTwoS2__c.field-meta.xml
<CustomField>
    <fullName>incrementalProcessFeeRoofTwoS2__c</fullName>
    <label>Source 2 Process Fee Roof 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>