force-app/main/default/objects/Specification__c/fields/incrementalRoofOne__c.field-meta.xml
<CustomField>
    <fullName>incrementalRoofOne__c</fullName>
    <label>Source 1 Roof 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>