force-app/main/default/objects/Specification__c/fields/incrementalRoofOneS2__c.field-meta.xml
<CustomField>
    <fullName>incrementalRoofOneS2__c</fullName>
    <label>Source 2 Roof 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>