force-app/main/default/objects/Specification__c/fields/incrementalRoofTwo__c.field-meta.xml
<CustomField>
    <fullName>incrementalRoofTwo__c</fullName>
    <label>Source 1 Roof 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>