force-app/main/default/objects/Specification__c/fields/incrementalRoofTwoS2__c.field-meta.xml
<CustomField>
    <fullName>incrementalRoofTwoS2__c</fullName>
    <label>Source 2 Roof 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>