force-app/main/default/objects/Specification__c/fields/incrementalTCO__c.field-meta.xml
<CustomField>
    <fullName>incrementalTCO__c</fullName>
    <label>Source 1 TCO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>