force-app/main/default/objects/Specification__c/fields/incrementalTCOS2__c.field-meta.xml
<CustomField>
    <fullName>incrementalTCOS2__c</fullName>
    <label>Source 2 TCO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>