force-app/main/default/objects/Specification__c/fields/incrementalTransportation__c.field-meta.xml
<CustomField>
    <fullName>incrementalTransportation__c</fullName>
    <label>Source 1 Transportation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>