force-app/main/default/objects/Specification__c/fields/incrementalYieldLCCMOne__c.field-meta.xml
<CustomField>
    <fullName>incrementalYieldLCCMOne__c</fullName>
    <label>Incremental Yield (LC CM #1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>