force-app/main/default/objects/Specification__c/fields/incrementalYieldLCCMTwo__c.field-meta.xml
<CustomField>
    <fullName>incrementalYieldLCCMTwo__c</fullName>
    <label>Incremental Yield (LC CM #2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>