force-app/main/default/objects/Specification__c/fields/incrementalYieldRoofOne__c.field-meta.xml
<CustomField>
    <fullName>incrementalYieldRoofOne__c</fullName>
    <label>Source 1 Yield Roof 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>