force-app/main/default/objects/Specification__c/fields/incrementalYieldRoofTwo__c.field-meta.xml
<CustomField>
    <fullName>incrementalYieldRoofTwo__c</fullName>
    <label>Source 1 Yield Roof 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>