force-app/main/default/objects/Specification__c/fields/initialBusinessCase__c.field-meta.xml
<CustomField>
    <fullName>initialBusinessCase__c</fullName>
    <label>Initial Business Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>