force-app/main/default/objects/Specification__c/fields/initialBusinessCaseReviewComplete__c.field-meta.xml
<CustomField>
    <fullName>initialBusinessCaseReviewComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Business Case Review Complete</label>
    <type>Checkbox</type>
</CustomField>