force-app/main/default/objects/Specification__c/fields/inkjetNeeded__c.field-meta.xml
<CustomField>
    <fullName>inkjetNeeded__c</fullName>
    <label>Inkjet Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inkjet -Normal</fullName>
            </value>
            <value>
                <fullName>Inkjet-Photorealistic-High-Res</fullName>
            </value>
            <value>
                <fullName>Inkjet-Photorealistic-Med-Res</fullName>
            </value>
            <value>
                <fullName>Inkjet-Photorealistic-Low-Res</fullName>
            </value>
            <value>
                <fullName>Inkjet -Normal;   Inkjet-Photorealistic-High-Res;  Inkjet-Photorealistic-Med-Res;  Inkjet-Photorealistic-Low-Res</fullName>
                <isActive>false</isActive>
                <label>Inkjet -Normal;   Inkjet-Photorealistic-High-Res;  Inkjet-Photorealistic-Med-Res;  Inkjet-Photorealistic-Low-Res</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>