force-app/main/default/objects/Specification__c/fields/innovation__c.field-meta.xml
<CustomField>
    <fullName>innovation__c</fullName>
    <label>Innovation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>