force-app/main/default/objects/Specification__c/fields/Innovation_Type__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Type__c</fullName>
    <label>Innovation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AntiGlare (AG)</fullName>
            </value>
            <value>
                <fullName>AntiMicrobial</fullName>
            </value>
            <value>
                <fullName>ArtEng</fullName>
            </value>
            <value>
                <fullName>DAR2.0</fullName>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
            <value>
                <fullName>DXPlus</fullName>
                <label>DX+</label>
            </value>
            <value>
                <fullName>DXC</fullName>
            </value>
            <value>
                <fullName>EZ/AR</fullName>
            </value>
            <value>
                <fullName>AR – Camera Hole</fullName>
            </value>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>Glass Back</fullName>
            </value>
            <value>
                <fullName>Glass Ceramics</fullName>
            </value>
            <value>
                <fullName>IT Size 3D</fullName>
            </value>
            <value>
                <fullName>Large Cover Glass</fullName>
            </value>
            <value>
                <fullName>NextGenSRPlus</fullName>
                <label>Next Gen SR+</label>
            </value>
            <value>
                <fullName>non-CE AR</fullName>
            </value>
            <value>
                <fullName>Corning Bendable Glass</fullName>
            </value>
            <value>
                <fullName>Screen Protector</fullName>
            </value>
            <value>
                <fullName>SRPlus</fullName>
                <label>SR+</label>
            </value>
            <value>
                <fullName>Vibrant</fullName>
            </value>
            <value>
                <fullName>Phire 2.0</fullName>
                <isActive>false</isActive>
                <label>Phire 2.0</label>
            </value>
            <value>
                <fullName>Phire 3.0</fullName>
                <isActive>false</isActive>
                <label>Phire 3.0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>