force-app/main/default/objects/Specification__c/fields/innovationAssessmentComplete__c.field-meta.xml
<CustomField>
    <fullName>innovationAssessmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Innovation Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>