force-app/main/default/objects/Specification__c/fields/inventoryProductCode__c.field-meta.xml
<CustomField>
    <fullName>inventoryProductCode__c</fullName>
    <label>Inventory Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>