force-app/main/default/objects/Specification__c/fields/ioxCs__c.field-meta.xml
<CustomField>
    <fullName>ioxCs__c</fullName>
    <label>Minimal IOX CS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>