force-app/main/default/objects/Specification__c/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <formula>IF( ISPICKVAL(status__c, &quot;Pricing Approved&quot;) , True, 
IF( ISPICKVAL(status__c, &quot;Declined&quot;) , True, False))</formula>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>