force-app/main/default/objects/Specification__c/fields/isCutSheet__c.field-meta.xml
<CustomField>
    <fullName>isCutSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cut Sheet?</label>
    <type>Checkbox</type>
</CustomField>