force-app/main/default/objects/Specification__c/fields/isMTO__c.field-meta.xml
<CustomField>
    <fullName>isMTO__c</fullName>
    <formula>IF( CONTAINS(RecordType.DeveloperName, &quot;Raw&quot;) || 
CONTAINS(RecordType.DeveloperName, &quot;Concore&quot;), True,False)</formula>
    <label>IsMTO</label>
    <type>Checkbox</type>
</CustomField>