force-app/main/default/objects/Specification__c/fields/isMyRecord__c.field-meta.xml
<CustomField>
    <fullName>isMyRecord__c</fullName>
    <formula>$User.Id = CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Record</label>
    <type>Checkbox</type>
</CustomField>