force-app/main/default/objects/Specification__c/fields/isOmega__c.field-meta.xml
<CustomField>
    <fullName>isOmega__c</fullName>
    <formula>IF(text( opportunity__r.marketSegment__c ) = &apos;Screen Protector - Amplify&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Omega</label>
    <type>Checkbox</type>
</CustomField>