force-app/main/default/objects/Specification__c/fields/isStandard__c.field-meta.xml
<CustomField>
    <fullName>isStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard (System Determined)</label>
    <type>Checkbox</type>
</CustomField>