force-app/main/default/objects/Specification__c/fields/isStandardOverride__c.field-meta.xml
<CustomField>
    <fullName>isStandardOverride__c</fullName>
    <formula>IF(ISPICKVAL( standard__c , &apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isStandard Override</label>
    <type>Checkbox</type>
</CustomField>