force-app/main/default/objects/Specification__c/fields/largeCoverGlass__c.field-meta.xml
<CustomField>
    <fullName>largeCoverGlass__c</fullName>
    <label>Large Cover Glass</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>