force-app/main/default/objects/Specification__c/fields/Line_Rate_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Line_Rate_Per_Day__c</fullName>
    <label>Line Rate Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>