force-app/main/default/objects/Specification__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <description>Manufacturing facility/location</description>
    <label>Primary CM Selected Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>