force-app/main/default/objects/Specification__c/fields/manufacturerAssignmentRemarks__c.field-meta.xml
<CustomField>
    <fullName>manufacturerAssignmentRemarks__c</fullName>
    <label>Primary Manufacturer Assignment Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>