force-app/main/default/objects/Specification__c/fields/manufacturingAssignmentComplete__c.field-meta.xml
<CustomField>
    <fullName>manufacturingAssignmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Manufacturing Assignment Complet</label>
    <type>Checkbox</type>
</CustomField>