force-app/main/default/objects/Specification__c/fields/margin__c.field-meta.xml
<CustomField>
    <fullName>margin__c</fullName>
    <formula>if(price1__c &gt; 0,
if(INCLUDES(plmPricedLocations__c,&apos;Source 2 Roof 1&apos;),(1-  incrementalTCOS2__c /  price1__c ),
(1-  incrementalTCO__c /  price1__c )),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>