force-app/main/default/objects/Specification__c/fields/marginPriceCalcValue__c.field-meta.xml
<CustomField>
    <fullName>marginPriceCalcValue__c</fullName>
    <label>Margin Price Calc. Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>