force-app/main/default/objects/Specification__c/fields/marketSegment__c.field-meta.xml
<CustomField>
    <fullName>marketSegment__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Segment</valueSetName>
    </valueSet>
</CustomField>