force-app/main/default/objects/Specification__c/fields/marketSubSegment__c.field-meta.xml
<CustomField>
    <fullName>marketSubSegment__c</fullName>
    <label>Market Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>marketSegment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>marketSubSegment</valueSetName>
    </valueSet>
</CustomField>