force-app/main/default/objects/Specification__c/fields/massProduction__c.field-meta.xml
<CustomField>
    <fullName>massProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S1 Mass Production</label>
    <type>Checkbox</type>
</CustomField>