force-app/main/default/objects/Specification__c/fields/maximumCrateDimensions__c.field-meta.xml
<CustomField>
    <fullName>maximumCrateDimensions__c</fullName>
    <label>Maximum Crate Dimensions</label>
    <length>18</length>
    <type>Text</type>
</CustomField>