force-app/main/default/objects/Specification__c/fields/missingInformationAssessmentComplete__c.field-meta.xml
<CustomField>
    <fullName>missingInformationAssessmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Information Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>