force-app/main/default/objects/Specification__c/fields/moq10CratesSqFt__c.field-meta.xml
<CustomField>
    <fullName>moq10CratesSqFt__c</fullName>
    <formula>((((width__c * length__c )/25.4)/25.4)/144) *  moqWith10Crates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOQ 10 Crates SqFt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>