force-app/main/default/objects/Specification__c/fields/moq6CrateYield__c.field-meta.xml
<CustomField>
    <fullName>moq6CrateYield__c</fullName>
    <label>MOQ 6 Crate Yield</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>