force-app/main/default/objects/Specification__c/fields/moq__c.field-meta.xml
<CustomField>
    <fullName>moq__c</fullName>
    <label>MP MOQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>