force-app/main/default/objects/Specification__c/fields/moqUom__c.field-meta.xml
<CustomField>
    <fullName>moqUom__c</fullName>
    <label>MOQ UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MoqUom</valueSetName>
    </valueSet>
</CustomField>