force-app/main/default/objects/Specification__c/fields/moqWith10Crates__c.field-meta.xml
<CustomField>
    <fullName>moqWith10Crates__c</fullName>
    <label>MOQ with 10 Crates (#Sheets)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>