force-app/main/default/objects/Specification__c/fields/mPQuoteLockCurrency__c.field-meta.xml
<CustomField>
    <fullName>mPQuoteLockCurrency__c</fullName>
    <formula>opportunity__r.mpQuoteCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP Quote Lock Currency</label>
    <type>Text</type>
</CustomField>