force-app/main/default/objects/Specification__c/fields/mpQuotePrice1__c.field-meta.xml
<CustomField>
    <fullName>mpQuotePrice1__c</fullName>
    <label>MP Quote Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>