force-app/main/default/objects/Specification__c/fields/mpRmbExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>mpRmbExchangeRate__c</fullName>
    <label>MP RMB Exchange Rate</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>