force-app/main/default/objects/Specification__c/fields/mpRmbLockedRate__c.field-meta.xml
<CustomField>
    <fullName>mpRmbLockedRate__c</fullName>
    <formula>opportunity__r.mpRmbExchangeRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP RMB Locked Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>