force-app/main/default/objects/Specification__c/fields/mtoNotificationPath__c.field-meta.xml
<CustomField>
    <fullName>mtoNotificationPath__c</fullName>
    <formula>CASE(  glassComposition__c  , 
&quot;1805&quot;, &quot;Path 1&quot;,
&quot;1807&quot;, &quot;Path 1&quot;,
&quot;2320&quot;, &quot;Path 1&quot;, 
&quot;2521&quot;, &quot;Path 1&quot;,  
&quot;4318&quot;, &quot;Path 1&quot;, 
&quot;5318&quot;, &quot;Path 1&quot;, 
&quot;7321&quot;, &quot;Path 1&quot;, 
&quot;7418&quot;, &quot;Path 1&quot;, 
&quot;7431&quot;, &quot;Path 1&quot;,
&quot;7518&quot;, &quot;Path 2&quot;, 
&quot;9318&quot;, &quot;Path 2&quot;,  
&quot;9319&quot;, &quot;Path 2&quot;,
&quot;9726&quot;, &quot;Path 2&quot;,
&quot;Path 1&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTO Notification Path</label>
    <type>Text</type>
</CustomField>