force-app/main/default/objects/Specification__c/fields/mtoReview__c.field-meta.xml
<CustomField>
    <fullName>mtoReview__c</fullName>
    <label>Demand Ops Final Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>