force-app/main/default/objects/Specification__c/fields/mtoReviewComplete__c.field-meta.xml
<CustomField>
    <fullName>mtoReviewComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MTO Review Complete</label>
    <type>Checkbox</type>
</CustomField>