force-app/main/default/objects/Specification__c/fields/New_Product_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Code_Number__c</fullName>
    <label>New Product Code Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>