force-app/main/default/objects/Specification__c/fields/New_Thickness_or_Size__c.field-meta.xml
<CustomField>
    <fullName>New_Thickness_or_Size__c</fullName>
    <label>New Thickness or Size?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Thickness</fullName>
            </value>
            <value>
                <fullName>New Size</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>