force-app/main/default/objects/Specification__c/fields/noContractManufacturerAvailable__c.field-meta.xml
<CustomField>
    <fullName>noContractManufacturerAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Contract Manufacturer Available</label>
    <type>Checkbox</type>
</CustomField>