force-app/main/default/objects/Specification__c/fields/nonCeAr__c.field-meta.xml
<CustomField>
    <fullName>nonCeAr__c</fullName>
    <label>non-CE AR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>