force-app/main/default/objects/Specification__c/fields/numberOfClearAgHoles__c.field-meta.xml
<CustomField>
    <fullName>numberOfClearAgHoles__c</fullName>
    <label>Number of Clear AG Holes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>