force-app/main/default/objects/Specification__c/fields/numberOfHoles__c.field-meta.xml
<CustomField>
    <fullName>numberOfHoles__c</fullName>
    <label>Number of Through Holes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>