force-app/main/default/objects/Specification__c/fields/operationalApproval__c.field-meta.xml
<CustomField>
    <fullName>operationalApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operational Approval</label>
    <type>Checkbox</type>
</CustomField>