force-app/main/default/objects/Specification__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>GG Program, GG Inquiry</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Specifications</relationshipLabel>
    <relationshipName>Specifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>