force-app/main/default/objects/Specification__c/fields/opportunityAccountId__c.field-meta.xml
<CustomField>
    <fullName>opportunityAccountId__c</fullName>
    <formula>opportunity__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Account Id</label>
    <type>Text</type>
</CustomField>