force-app/main/default/objects/Specification__c/fields/opportunityAccountName__c.field-meta.xml
<CustomField>
    <fullName>opportunityAccountName__c</fullName>
    <formula>opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Account Name</label>
    <type>Text</type>
</CustomField>