force-app/main/default/objects/Specification__c/fields/opportunityApplication__c.field-meta.xml
<CustomField>
    <fullName>opportunityApplication__c</fullName>
    <formula>text(opportunity__r.application__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Application</label>
    <type>Text</type>
</CustomField>