force-app/main/default/objects/Specification__c/fields/OpportunityMarketSegment__c.field-meta.xml
<CustomField>
    <fullName>OpportunityMarketSegment__c</fullName>
    <formula>text(opportunity__r.marketSegment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Market Segment</label>
    <type>Text</type>
</CustomField>