force-app/main/default/objects/Specification__c/fields/opportunityMarketSubSegment__c.field-meta.xml
<CustomField>
    <fullName>opportunityMarketSubSegment__c</fullName>
    <formula>text(opportunity__r.marketSubSegment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Market Sub-Segment</label>
    <type>Text</type>
</CustomField>