force-app/main/default/objects/Specification__c/fields/opportunityName__c.field-meta.xml
<CustomField>
    <fullName>opportunityName__c</fullName>
    <formula>opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>