force-app/main/default/objects/Specification__c/fields/opportunityProductionVolume__c.field-meta.xml
<CustomField>
    <fullName>opportunityProductionVolume__c</fullName>
    <formula>opportunity__r.estimatedTotalVolume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Production Volume (Parts/Mo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>