force-app/main/default/objects/Specification__c/fields/originalSpecId__c.field-meta.xml
<CustomField>
    <fullName>originalSpecId__c</fullName>
    <label>Original Spec Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>